TryFix - Fix the overlapping of text in staff_capsult, not hidden by ellipse.

--- a/pages/index.less
+++ b/pages/index.less
@@ -98,6 +98,7 @@ main > *
 
 #staff_list
 {
+    padding: 1vh 0px;
     gap: 4vw;
     justify-content: center;
     overflow-x: scroll;
